# time-series-with-the-of-power-demand-using-prophet-in-python

./: .gitignore  2023-12-13_Time-Series-with-the-of-power-demand-using-Prophet-in-Python-1680eb2d17d1.py  README.md  article.md  benchmark_rust.py  pyproject.toml
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py
