[project]
name = "time-series-with-the-of-power-demand-using-prophet-in-python"
version = "0.1.0"
description = "Companion code for Medium article: time series with the of power demand using prophet in python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "plotly>=6.0",
    "prophet>=1.1.6",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
